Co-authored-by: tristanacosta1 <tristanacosta1@users.noreply.github.com>

--- a/patch 1.1/html/activity1-saad.html
+++ b/patch 1.1/html/activity1-saad.html
@@ -19,6 +19,7 @@
         <div class="header-right">
             <i class="fa-solid fa-plus" style="font-size: 25px;"></i>
             <img src="../static/tristan.png" width="50" height="50" alt="pfp">
+            <a href="/profile/html/login.html" style="color: red; text-decoration: none;"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
         </div>
     </header>
 
