--- a/patch 1.1/html/faculty-dashboard.html
+++ b/patch 1.1/html/faculty-dashboard.html
@@ -19,6 +19,7 @@
         <div class="header-right">
             <i class="fa-solid fa-plus" style="font-size: 25px;"></i>
             <img src="../static/tristan.png" width="50" height="50" alt="pfp">
+            <a href="/profile/html/login.html" style="color: red; text-decoration: none;"><i class="fa-solid fa-right-from-bracket"></i> Logout</a>
         </div>
     </header>
 
@@ -62,7 +63,7 @@
                 <i class="fa-solid fa-archive"></i>
                 <span class="link-name">Archived Classes</span>
             </a>
-            <a href="#" class="link" id="dropdown-1">
+            <a href="/profile/html/profile-faculty.html" class="link" id="dropdown-1">
                 <i class="fa-solid fa-gear"></i>
                 <span class="link-name">Settings</span>
             </a>
@@ -87,17 +88,17 @@
                             <div class="act-title">
                                 <ul>
                                     <li>
-                                        <a href="../html/activity1-webdev.html">1:00 pm - Final project presentation</a>
+                                        <a href="../html/activity1-webdev.html" class="link">1:00 pm - Final project presentation</a>
                                     </li>
                                 </ul>
                             </div>
-                            <a href="../html/webdev-classwork.html">view all</a>
+                            <a href="../html/webdev-classwork.html" class="link-1">view all</a>
                         </span>
                     </div>
                     <div class="class-meta">
-                        <a href="" class="record"><i class="fa-solid fa-arrow-trend-up "></i></a>
-                        <a href="" class="folder"><i class="fa-regular fa-folder "></i></a>
-                        <a href="" class="settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
+                        <a href="#" class="record" class="link-1"><i class="fa-solid fa-arrow-trend-up "></i></a>
+                        <a href="#" class="folder" class="link-1"><i class="fa-regular fa-folder "></i></a>
+                        <a href="#" class="settings" class="link-1"><i class="fa-solid fa-ellipsis-vertical "></i></a>
                     </div>
                 </div>
 
@@ -117,17 +118,17 @@
                             <div class="act-title">
                                 <ul>
                                     <li>
-                                        <a href="../html/activity1.html">5:00 pm - Submission of exam</a>
+                                        <a href="../html/activity1.html" class="link">5:00 pm - Submission of exam</a>
                                     </li>
                                 </ul>
                             </div>
-                            <a href="../html/webdev-classwork.html">view all</a>
+                            <a href="../html/webdev-classwork.html" class="link-1">view all</a>
                         </span>
                     </div>
                     <div class="class-meta">
-                        <a href="" class="record"><i class="fa-solid fa-arrow-trend-up "></i></a>
-                        <a href="" class="folder"><i class="fa-regular fa-folder "></i></a>
-                        <a href="" class="settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
+                        <a href="#" class="record" class="link-1"><i class="fa-solid fa-arrow-trend-up "></i></a>
+                        <a href="#" class="folder" class="link-1"><i class="fa-regular fa-folder "></i></a>
+                        <a href="#" class="settings" class="link-1"><i class="fa-solid fa-ellipsis-vertical "></i></a>
                     </div>
                 </div>
             <a href="#">
@@ -146,22 +147,21 @@
                         <div class="act-title">
                             <ul>
                                 <li>
-                                    <a href="../html/activity1-saad.html">5:00 pm - Final project</a>
+                                    <a href="../html/activity1-saad.html" class="link">5:00 pm - Final project</a>
                                 </li>
                             </ul>
                         </div>
-                        <a href="../html/webdev-classwork.html">view all</a>
+                        <a href="../html/webdev-classwork.html" class="link-1">view all</a>
                     </span>
                 </div>
                     <div class="class-meta">
-                        <a href="" class="record"><i class="fa-solid fa-arrow-trend-up "></i></a>
-                        <a href="" class="folder"><i class="fa-regular fa-folder "></i></a>
-                        <a href="" class="settings"><i class="fa-solid fa-ellipsis-vertical "></i></a>
+                        <a href="#" class="record" class="link-1"><i class="fa-solid fa-arrow-trend-up "></i></a>
+                        <a href="#" class="folder" class="link-1"><i class="fa-regular fa-folder "></i></a>
+                        <a href="#" class="settings" class="link-1"><i class="fa-solid fa-ellipsis-vertical "></i></a>
                     </div>
                 </div>
         </div>
     </main>
-    <script src="../js/deliverables.js"></script>
     <script src="../js/navbar.js"></script>
 </body>
 </html>
