--- a/patch 1.1/html/webdev-people.html
+++ b/patch 1.1/html/webdev-people.html
@@ -24,7 +24,7 @@
 
     <aside class="navbar open">
         <div class="navbar-group">
-            <a href="#" class="link">
+            <a href="../html/faculty-dashboard.html" class="link">
                 <i class="fa-solid fa-house"></i>
                 <span class="link-name">Home</span>
             </a>
@@ -39,20 +39,20 @@
                 <span class="link-name toggle">Teaching</span>
             </a>
             <div id="toggle-group">
-                <a href="#" class="link visible">
+                <a href="../html/faculty-resources.html" class="link visible">
                     <i class="fa-solid fa-book"></i>
                     <span class="link-name">Resources</span>
                 </a>
-                <a href="#" class="link visible">
+                <a href="../html/faculty-submissions.html" class="link visible">
                     <i class="fa-solid fa-folder"></i>
                     <span class="link-name">Submissions</span>
                 </a>
-                <a href="#" class="link visible">
+                <a href="../html/webdev.html" class="link visible">
                     <!--<img width="24" height="24" src="#" alt="home"/>-->
                     <i class="fa-solid fa-circle"></i>
                     <div class="class-info">
-                        <span class="link-name">Class 1</span>
-                        <span class="link-class">Section</span>
+                        <span class="link-name">Web Design Development</span>
+                        <span class="link-class">BSAIS 2-1</span>
                     </div>
                 </a>
             </div>
