--- a/profile/html/dashboard-student.html
+++ b/profile/html/dashboard-student.html
@@ -22,13 +22,13 @@
             <ul>
                 <li><a href="../html/dashboard-student.html" class="active"><i class="fa-solid fa-house"></i>Dashboard</a></li>
                 <li><a href="../html/attendance-student.html"><i class="fa-solid fa-clipboard-user"></i>Attendance</a></li>
-                <li><a href="./grades.html"><i class="fa-solid fa-ranking-star"></i>Grades</a></li>
+                <li><a href="/profile/html/view-grades.html"><i class="fa-solid fa-ranking-star"></i>Grades</a></li>
                 <li><a href="../html/profile.html"><i class="fa-solid fa-user"></i>Profile</a></li>
             </ul>
         </nav>
         <nav>
             <ul>
-                <li></li>
+                <li><a href="/profile/html/login.html" style="color: red;"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
                 <li></li>
                 <li></li>
                 <li></li>
