--- a/profile/html/profile.html
+++ b/profile/html/profile.html
@@ -28,7 +28,7 @@
         </nav>
         <nav>
             <ul>
-                <li></li>
+                <li><a href="/profile/html/login.html" style="color: red;"><i class="fa-solid fa-right-from-bracket"></i>Logout</a></li>
                 <li></li>
                 <li></li>
                 <li></li>
@@ -55,25 +55,29 @@
                 <div class="container">
                     <div class="left">
                         <div class="top">
-                            <p class="heading" id="fname">First Name</p>
-                            <p class="text editable">Tristan</p>
+                            <p class="heading" id="fname">Program/Degree</p>
+                            <p class="text editable">Bachelor of Science in Aviation Information System</p>
                         </div>
                         <div class="top">
-                            <p class="heading">Email Address</p>
-                            <p class="text editable">tristanacosta03@gmail.com</p>
+                            <p class="heading">Year Level</p>
+                            <p class="text editable">Second Year</p>
+                        </div>
+                        <div class="top">
+                            <p class="heading">Student Status</p>
+                            <p class="text editable">Enrolled</p>
                         </div>
                     </div>
                     <div class="right">
                         <div class="top">
-                            <p class="heading" id="lname">Last Name</p>
-                            <p class="text editable">Acosta</p>
+                            <p class="heading" id="lname">Email Address</p>
+                            <p class="text editable">tristan@gmail.com</p>
                             <br>
-                            <p class="heading" id="Mname">MI</p>
-                            <p class="text editable">D.</p>
+                            <p class="heading" id="Mname">Phone</p>
+                            <p class="text editable">09123456789</p>
                         </div>
                         <div class="top">
-                            <p class="heading">Phone</p>
-                            <p class="text editable">09123456789</p>
+                            <p class="heading">Address</p>
+                            <p class="text editable">Area 7 Libjo Sto. Niño Parañaque City</p>
                         </div>
                     </div>
                     <div>
