--- a/profile/html/view-grades.html
+++ b/profile/html/view-grades.html
@@ -39,12 +39,13 @@
         <div class="card-container">
             <div class="card">
                 <h1>Grades</h1>
-                <table id="faculty-grades-table-1" class="class-list-table">
+                <table id="class-list-table-1" class="class-list-table">
                     <thead>
                         <tr>
-                            <th>Student ID</th>
-                            <th>Student Name</th>
-                            <th>Section</th>
+                            <th>Subject ID</th>
+                            <th>Subject Description</th>
+                            <th>Instructor</th>
+                            <th>Units</th>
                             <th>Prelim</th>
                             <th>Midterm</th>
                             <th>Final</th>
@@ -54,31 +55,34 @@
                     <tbody>
                         <!-- Add student data here -->
                         <tr>
-                            <td>12223MN-000540</td>
-                            <td>Balaba, Claire Angeli J.</td>
-                            <td>BSAIS 2-1</td>
-                            <td><input type="text" name="prelim_grade" value="85" min="0" max="100" required></td>
-                            <td><input type="text" name="midterm_grade" value="90" min="0" max="100" required></td>
-                            <td><input type="text" name="final_grade" value="92" min="0" max="100" required></td>
-                            <td><b id="gwa">89.33</b></td>
+                            <td>IS221</td>
+                            <td>Web Design Development</td>
+                            <td>Ricafort, Sheryl Ann B.</td>
+                            <td>3</td>
+                            <td><input type="text" disabled name="prelim_grade" value="85.00" min="0" max="100" required></td>
+                            <td><input type="text" disabled name="midterm_grade" value="90.00" min="0" max="100" required></td>
+                            <td><input type="text" disabled name="final_grade" value="92.00" min="0" max="100" required></td>
+                            <td><b id="gwa"></b></td>
                         </tr>
                         <tr>
                             <td>AIS223</td>
                             <td>Advance Airline Ticketing</td>
                             <td>Caguia, Cielito M.</td>
-                            <td><input type="text" name="prelim_grade" value="80" min="0" max="100" required></td>
-                            <td><input type="text" name="midterm_grade" value="85" min="0" max="100" required></td>
-                            <td><input type="text" name="final_grade" value="90" min="0" max="100" required></td>
-                            <td><b id="gwa">85.00</b></td>
+                            <td>3</td>
+                            <td><input type="text" disabled name="prelim_grade" value="96.25" min="0" max="100" required></td>
+                            <td><input type="text" disabled name="midterm_grade" value="98.80" min="0" max="100" required></td>
+                            <td><input type="text" disabled name="final_grade" value="100" min="0" max="100" required></td>
+                            <td><b id="gwa"></b></td>
                         </tr>
                         <tr>
                             <td>IS222</td>
                             <td>System Analysis and Design</td>
                             <td>Dasalla, Jerum B.</td>
-                            <td><input type="text" name="prelim_grade" value="86" min="0" max="100" required></td>
-                            <td><input type="text" name="midterm_grade" value="90" min="0" max="100" required></td>
-                            <td><input type="text" name="final_grade" value="94" min="0" max="100" required></td>
-                            <td><b id="gwa">90.00</b></td>
+                            <td>3</td>
+                            <td><input type="text" disabled name="prelim_grade" value="86.00" min="0" max="100" required></td>
+                            <td><input type="text" disabled name="midterm_grade" value="85.00" min="0" max="100" required></td>
+                            <td><input type="text" disabled name="final_grade" value="" min="0" max="100" required></td>
+                            <td><b id="gwa"></b></td>
                         </tr>
                     </tbody>
                 </table>
